[package]
name = "squeezy-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
# Off by default. Exposes `pub mod testing` with a `TuiHarness` that
# drives the full TuiApp + Agent + ratatui pipeline against a
# `TestBackend`. Consumed by `squeezy-eval` so scenarios can send key
# events at a real `handle_key`. Release TUI binaries don't enable it,
# so the test surface stays out of the shipped library.
testing = []

[dependencies]
ansi-to-tui.workspace = true
crossterm.workspace = true
ignore.workspace = true
lru.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
similar.workspace = true
squeezy-agent.workspace = true
squeezy-core.workspace = true
squeezy-llm.workspace = true
squeezy-skills.workspace = true
squeezy-store.workspace = true
squeezy-telemetry.workspace = true
squeezy-tools.workspace = true
squeezy-vcs.workspace = true
supports-color.workspace = true
toml_edit.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-c.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-css.workspace = true
tree-sitter-go.workspace = true
tree-sitter-highlight.workspace = true
tree-sitter-html.workspace = true
tree-sitter-java.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-json.workspace = true
tree-sitter-lua.workspace = true
tree-sitter-php.workspace = true
tree-sitter-python.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-sequel.workspace = true
tree-sitter-toml-updated.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-yaml.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

# Unix-only: re-raising SIGTSTP with the default disposition so Ctrl+Z (job
# control) actually suspends squeezy after we restore the terminal. Every `libc`
# use site lives in `#[cfg(unix)]` items in `signal_teardown.rs`, so the
# dependency is scoped to Unix targets and never compiled into Windows builds.
[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
futures-util.workspace = true
