[package]
name = "squeezy-win-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Windows OS-level shell sandbox (restricted-token + elevated tiers) for Squeezy"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[lib]

[[bin]]
name = "squeezy-sandbox-setup"
path = "src/bin/setup_main.rs"

[dependencies]
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
# Used by the Windows smoke tests (`tests/win_sandbox_smoke.rs`) for the async
# `WinSandboxChild::wait` call.  The file is gated `#![cfg(windows)]`, so
# tokio is only used on Windows at runtime; it must compile on all hosts.
tokio = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
getrandom.workspace = true
globset.workspace = true
tokio.workspace = true
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_NetworkManagement_NetManagement",
    "Win32_System_Registry",
    "Win32_System_StationsAndDesktops",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_Networking_WinSock",
    "Win32_System_Rpc",
] }
